kubeconfig/tic-tac-toe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: tic-tac-toe-backend
